fix wrap

--- a/css/detoxify.css
+++ b/css/detoxify.css
@@ -20,6 +20,7 @@
   max-width: 40%;
   max-height: 33%;
   overflow-y: scroll;
+  overflow-wrap: anywhere;
   white-space: pre-line;
   color: black;
   font-family: Roboto, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, 'Open Sans', 'Helvetica Neue', sans-serif;
